Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@ Please feel free to clone and start hacking.</p>
 ./run-osx.sh Contents/Tests/ <span class="c"># run all tests</span>
 </pre></div>
 
+<h3>Windows</h3>
+
+<p><strong>Note:</strong> Tests seem to run <em>much</em> faster when the server is left running.</p>
+
+<pre lang="dos"><code>git clone git://github.com/mikew/plex-nose-example.git
+cd plex-nose-example\
+.\run-windows.bat Contents\Tests\test_....py # run specific tests
+.\run-windows.bat Contents\Tests # run all tests
+</code></pre>
+
 <h3>Other Operating Systems</h3>
 
 <p>To run the tests, you need to grab the environment variables that Plex
